@@ -79,6 +79,8 @@ Library
 Build
 -----
 
+- Issue #4389: Add icon to the uninstall entry in "add-and-remove-programs".
+
 - Issue #4289: Remove Cancel button from AdvancedDlg.
 
 - Issue #1656675: Register a drop handler for .py* files on Windows.
